force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__Siharaigaku__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Siharaigaku__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>When this field is &apos;0&apos; and Payment Confirmed-Buying is checked, Amount Buying including Tax(Local) is inserted in this field</inlineHelpText>
    <label>AMOUNT PAID-BUYING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>