force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__SiharaisakiSyubetu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SiharaisakiSyubetu__c</fullName>
    <formula>text(clofor_com_cfs__PaymentTo__r.clofor_com_cfs__Custom_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CATEGORY OF PAYMENT TO-BUYING</label>
    <type>Text</type>
</CustomField>