force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__Tariff__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Tariff__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Optional Filter criteria: 1 and (2 or 3)
-1:Pricing Name in Pricing: Active equal True
-2:Service Provider Vendor in Pricing equal Payment To-Buying in Invoicing
-3:Target Customer in Pricing equal Invoice To in Invoicing</inlineHelpText>
    <label>PRICING NAME</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__TariffMaster__c.clofor_com_cfs__ProductFlag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Service: Active status equals True</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__TariffMaster__c</referenceTo>
    <relationshipLabel>F/TMS BILL</relationshipLabel>
    <relationshipName>Tariff</relationshipName>
    <type>Lookup</type>
</CustomField>