force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__Tatekae__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Tatekae__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box if buying item is an advance payment(such as customs duty, Tax)</inlineHelpText>
    <label>DUTY BUYING FOR ADVANCE PAYMENT</label>
    <type>Checkbox</type>
</CustomField>