force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__TaxShow__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TaxShow__c</fullName>
    <description>数式で使用するための項目</description>
    <formula>IF( clofor_com_cfs__ProductTax__c = &apos;課税&apos; ,clofor_com_cfs__TaxInitial__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONSUMPTION TAX FOR CALCULATION-SELLING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>