force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__TextFTMSSOID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TextFTMSSOID__c</fullName>
    <label>Text F/TMS SO ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>