force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__TotalAmountofBuying3rdCurrencyAdjust__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountofBuying3rdCurrencyAdjust__c</fullName>
    <label>Total Amount of Buying(3rd Currency)-Adj</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>