force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__TotalAmountofBuyingFCYAdjust__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountofBuyingFCYAdjust__c</fullName>
    <label>Total Amount of Buying(FCY)-Adjust</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>