force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__TotalAmountofSelling3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountofSelling3rdCurrency__c</fullName>
    <formula>ROUND(clofor_com_cfs__Suryo__c * clofor_com_cfs__UnitPriceofSelling3rdCurrency__c,3) + clofor_com_cfs__TotalAmountofSelling3rdCurrencyAdjust__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount of Selling(3rd Currency)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>