force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__TotalAmountofSellingLocalAdjust__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountofSellingLocalAdjust__c</fullName>
    <label>Total Amount of Selling(Local)-Adjust</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>