force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__UnitPriceofSelling3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnitPriceofSelling3rdCurrency__c</fullName>
    <label>Unit Price of Selling(3rd Currency)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>