force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__UNPAID_BALANCE_OF_BUYING_USD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UNPAID_BALANCE_OF_BUYING_USD__c</fullName>
    <formula>clofor_com_cfs__BuyInTaxAmountUSD__c - clofor_com_cfs__AMOUNT_PAID_BUYING_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unpaid Balance of Buying(USD)=Amount Buying including Tax(USD)-Amount Paid-Buying(USD)</inlineHelpText>
    <label>UNPAID BALANCE OF BUYING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>