force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__UNPAID_BALANCE_OF_SELLING_USD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UNPAID_BALANCE_OF_SELLING_USD__c</fullName>
    <formula>clofor_com_cfs__SellInTaxAmount_USD__c - clofor_com_cfs__AMOUNT_PAID_SELLING_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unpaid Balance of Selling(USD)=Amount Selling including Tax(USD)-Amount Received from Customer(USD)</inlineHelpText>
    <label>UNPAID BALANCE OF SELLING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>