force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__USDTaxAdjustmentSell__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__USDTaxAdjustmentSell__c</fullName>
    <inlineHelpText>Input the difference between the calculated Tax by formula and actual amount to customer</inlineHelpText>
    <label>TAX-SELLING ADJUSTMENT(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>