force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__wkPayBaseDatePayTo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__wkPayBaseDatePayTo__c</fullName>
    <formula>text( clofor_com_cfs__PaymentTo__r.clofor_com_cfs__PaymentBaseDate__c )</formula>
    <label>wkPayment Base Date-Payment To</label>
    <type>Text</type>
</CustomField>