force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__wkPayConditionInvoiceTo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__wkPayConditionInvoiceTo__c</fullName>
    <formula>text( clofor_com_cfs__Seikyusaki__r.clofor_com_cfs__PayConditionFromBase__c )</formula>
    <label>wkPayment Condition-Invoice To</label>
    <type>Text</type>
</CustomField>