force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__wkSBS2__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__wkSBS2__c</fullName>
    <formula>IF( clofor_com_cfs__Seikyusaki__r.Id  = clofor_com_cfs__Anken__r.clofor_com_cfs__Field1__r.Id ,true,false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>wkACCOUNT = SELLING(AGENT)</label>
    <type>Checkbox</type>
</CustomField>