force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/clofor_com_cfs__wkShireSyubetu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__wkShireSyubetu__c</fullName>
    <formula>TEXT(clofor_com_cfs__PaymentTo__r.clofor_com_cfs__Custom_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>wkSERVICE PROVIDER CATEGORY</label>
    <type>Text</type>
</CustomField>