force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/CommercialINVNo__c.field-meta.xml
<CustomField>
    <fullName>CommercialINVNo__c</fullName>
    <label>Commercial INV No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>