force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/ConsolBillID__c.field-meta.xml
<CustomField>
    <fullName>ConsolBillID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consol Bill ID</label>
    <referenceTo>clofor_com_cfs__MasterAnkenMeisai__c</referenceTo>
    <relationshipLabel>F/TMS Bill (Consol Bill ID)</relationshipLabel>
    <relationshipName>F_TMS_Bill</relationshipName>
    <type>Lookup</type>
</CustomField>