force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/CreditNoteNo__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteNo__c</fullName>
    <label>Credit Note No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>