force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/DebitNoteNo__c.field-meta.xml
<CustomField>
    <fullName>DebitNoteNo__c</fullName>
    <label>Debit Note No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>