force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/DepositNo__c.field-meta.xml
<CustomField>
    <fullName>DepositNo__c</fullName>
    <label>Deposit No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>