force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/External_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Folder_ID__c</fullName>
    <description>Store Folder ID of current record</description>
    <label>External Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>