force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/F_TMS_Bill_ID_name__c.field-meta.xml
<CustomField>
    <fullName>F_TMS_Bill_ID_name__c</fullName>
    <formula>HYPERLINK( LEFT($Api.Partner_Server_URL_450, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_450)) + CASESAFEID( Id ),  Name  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>F/TMS Bill ID (name)</label>
    <type>Text</type>
</CustomField>