force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/Invoice_to_name__c.field-meta.xml
<CustomField>
    <fullName>Invoice_to_name__c</fullName>
    <formula>HYPERLINK( LEFT($Api.Partner_Server_URL_450, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_450)) + CASESAFEID( clofor_com_cfs__Seikyusaki__r.Id ),  clofor_com_cfs__Seikyusaki__r.Name  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice to (name)</label>
    <type>Text</type>
</CustomField>