force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/NumberCommercialInvoice__c.field-meta.xml
<CustomField>
    <fullName>NumberCommercialInvoice__c</fullName>
    <formula>VALUE(RIGHT(CommercialINVNo__c , 4))</formula>
    <label>Number Commercial Invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>