force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/NumberCreditNote__c.field-meta.xml
<CustomField>
    <fullName>NumberCreditNote__c</fullName>
    <formula>VALUE(RIGHT(CreditNoteNo__c, 4))</formula>
    <label>Number Credit Note</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>