force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/NumberDebitNote__c.field-meta.xml
<CustomField>
    <fullName>NumberDebitNote__c</fullName>
    <formula>VALUE(RIGHT(DebitNoteNo__c, 4))</formula>
    <label>Number Debit Note</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>