force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/NumberReimbursement__c.field-meta.xml
<CustomField>
    <fullName>NumberReimbursement__c</fullName>
    <formula>VALUE(RIGHT(ReimbursementNo__c, 4))</formula>
    <label>Number Reimbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>