force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/NumberTaxInvoice__c.field-meta.xml
<CustomField>
    <fullName>NumberTaxInvoice__c</fullName>
    <formula>VALUE(RIGHT(TaxInvoiceNo__c, 4))</formula>
    <label>Number Tax Invoice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>