force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/OutboundInvoiceNo__c.field-meta.xml
<CustomField>
    <fullName>OutboundInvoiceNo__c</fullName>
    <label>Outbound Invoice No</label>
    <length>225</length>
    <type>Text</type>
</CustomField>