force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/PrintDateCI__c.field-meta.xml
<CustomField>
    <fullName>PrintDateCI__c</fullName>
    <label>Print Date (CI)</label>
    <type>Date</type>
</CustomField>