force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/PrintDateCN__c.field-meta.xml
<CustomField>
    <fullName>PrintDateCN__c</fullName>
    <label>Print Date (CN)</label>
    <type>Date</type>
</CustomField>