force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/PrintDateDN__c.field-meta.xml
<CustomField>
    <fullName>PrintDateDN__c</fullName>
    <label>Print Date (DN)</label>
    <type>Date</type>
</CustomField>