force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/PrintDateReim__c.field-meta.xml
<CustomField>
    <fullName>PrintDateReim__c</fullName>
    <label>Print Date (Reim)</label>
    <type>Date</type>
</CustomField>