force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/ReimbursementNo__c.field-meta.xml
<CustomField>
    <fullName>ReimbursementNo__c</fullName>
    <label>Reimbursement No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>