force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/RemarkCreditNote__c.field-meta.xml
<CustomField>
    <fullName>RemarkCreditNote__c</fullName>
    <label>Remark (Credit Note)</label>
    <type>TextArea</type>
</CustomField>