force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/RemarkDebitNote__c.field-meta.xml
<CustomField>
    <fullName>RemarkDebitNote__c</fullName>
    <label>Remark (Debit Note)</label>
    <type>TextArea</type>
</CustomField>