force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/RemarkReimbursement__c.field-meta.xml
<CustomField>
    <fullName>RemarkReimbursement__c</fullName>
    <label>Remark (Reimbursement)</label>
    <type>TextArea</type>
</CustomField>