force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/RemarkTaxInvoice__c.field-meta.xml
<CustomField>
    <fullName>RemarkTaxInvoice__c</fullName>
    <label>Remark (Tax Invoice)</label>
    <type>TextArea</type>
</CustomField>