force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/SelectForm__c.field-meta.xml
<CustomField>
    <fullName>SelectForm__c</fullName>
    <label>Select Form</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debit Note</fullName>
            </value>
            <value>
                <fullName>Credit Note</fullName>
            </value>
            <value>
                <fullName>Commercial Invoice</fullName>
            </value>
            <value>
                <fullName>Reimbursement</fullName>
            </value>
            <value>
                <fullName>Container Deposit</fullName>
            </value>
            <value>
                <fullName>Tax Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>