force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/Tax_Type_Selling__c.field-meta.xml
<CustomField>
    <fullName>Tax_Type_Selling__c</fullName>
    <label>Tax Type-Selling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__TaxType</valueSetName>
    </valueSet>
</CustomField>