force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/fields/TaxInvoiceNo__c.field-meta.xml
<CustomField>
    <fullName>TaxInvoiceNo__c</fullName>
    <label>Tax Invoice No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>