force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/recordTypes/clofor_com_cfs__Consolidation_Cost_allocation.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Consolidation_Cost_allocation</fullName>
    <active>true</active>
    <description>Choose this record type to create a cost which is allocated from Consolidation Costs.</description>
    <label>Consolidation Cost allocation</label>
</RecordType>