force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/recordTypes/clofor_com_cfs__ConsolidationAllocation.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ConsolidationAllocation</fullName>
    <active>true</active>
    <description>Allocate Selling and Costs from Consol to FMS Bill</description>
    <label>Consolidation Allocation</label>
</RecordType>