force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/recordTypes/clofor_com_cfs__Selling_Buyging_Standard.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Selling_Buyging_Standard</fullName>
    <active>true</active>
    <description>Choose this record type to create Invoicing to customers and payment to vendors.</description>
    <label>Selling/Buyging Standard</label>
</RecordType>