force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/validationRules/clofor_com_cfs__chk_lock.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__chk_lock</fullName>
    <active>false</active>
    <description>旧）CONTAINS( Recordtype__c ,&quot;ロック&quot;)</description>
    <errorConditionFormula>AND(CONTAINS( clofor_com_cfs__Recordtype__c ,&quot;ロック&quot;), ISBLANK(clofor_com_cfs__Anken__r.clofor_com_cfs__FlgCopy__c ), NOT(clofor_com_cfs__BY_PASS_VALIDATION_RULE__c) )</errorConditionFormula>
    <errorMessage>請求済みの明細は編集できません。確認して下さい。</errorMessage>
</ValidationRule>