force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/validationRules/clofor_com_cfs__chk_lock_test.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__chk_lock_test</fullName>
    <active>true</active>
    <description>旧）CONTAINS( Recordtype__c ,&quot;ロック&quot;)</description>
    <errorConditionFormula>AND 
( 
ISCHANGED(clofor_com_cfs__Suryo__c), 
CONTAINS(clofor_com_cfs__Anken__r.RecordType.DeveloperName,&quot;Lock&quot;) 
)</errorConditionFormula>
    <errorMessage>請求済みの明細は編集できません。確認して下さい。</errorMessage>
</ValidationRule>