force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/validationRules/clofor_com_cfs__LOCK_TAX_SELLING_RATE.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__LOCK_TAX_SELLING_RATE</fullName>
    <active>true</active>
    <errorConditionFormula>AND 
( 
ISCHANGED( clofor_com_cfs__TaxInitial__c ), 
clofor_com_cfs__VAT_INVOICE_ISSUE_STATUS__c = TRUE 
)</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__TaxInitial__c</errorDisplayField>
    <errorMessage>This field is locked because the SELLING LOCK AFTER VAT INVOICE ISSUE check-box is checked.</errorMessage>
</ValidationRule>