force-app/main/default/objects/clofor_com_cfs__AnkenMeisai__c/validationRules/clofor_com_cfs__LOCK_UNIT_PRICE_LOCAL.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__LOCK_UNIT_PRICE_LOCAL</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISCHANGED(clofor_com_cfs__SellTankaJPY__c),
clofor_com_cfs__VAT_INVOICE_ISSUE_STATUS__c  = TRUE
)</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__SellTankaJPY__c</errorDisplayField>
    <errorMessage>This field is locked because the SELLING LOCK AFTER VAT INVOICE ISSUE check-box is checked.</errorMessage>
</ValidationRule>